--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,15 @@
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  background-color: #e5e5f7;
+opacity: 0.8;
+background-image: radial-gradient(#d044f7 0.5px, #e5e5f7 0.5px);
+background-size: 10px 10px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
 
 @tailwind base;
 @tailwind components;
